--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,72 @@
-body {
-    background-color: red;
+* {
+    margin: 0;
 }
 
-.table {
-    display: grid;
+body {
+    background-color: #fafafa;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.album-list-container {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.album-row {
+    display: flex;
+    flex-direction: row;
+    padding: 15px;
+    border: 3px solid black;
+    width: 800px;
+    margin-bottom: 12px
+}
+
+.album-image img {
+    width: 200px;
+}
+
+.album-info {
+    margin-left: 9px;
+}
+
+.title {
+    text-transform: uppercase;
+    font-size: 20px;
+    color: gray
+}
+
+.genre {
+    margin-top: 20px
+}
+
+
+
+.review-sentence {
+    margin-top: 10px;
+    font-style: italic;
+}
+
+.score {
+    font-size: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.score div {
+    border: 3px solid black;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.genre span {
+    border: 1px solid black;
+    padding: 5px;
 }
