--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,26 @@
 <body>
     <h1>albums</h1>
     <h2>hmm:  </h2>
-    <div id="album-table" class="table"></div>
+    <table id="album-table" class="table"></table>
+
+    <div class="album-list-container" id="albumListContainer"></div>
 
 
+    <template id ="albumTemplate">
+        <div class="album-row">
+            <div class="album-rank"></div>
+            <div class="album-image">
+                <img src="img/pinkfloydanimals.jpg">
+            </div>
+            <div class="album-info">
+                <h1 class="album-title"></h1>
+                <h2 class="title"></h2>
+                <div class="genre"><span></span></div>
+                <p class="review-sentence"></p>
+            </div>
+            <div class="score"><div>8</div></div>
+        </div>
+    </template>
     <script src="script.js"></script>
 </body>
 </html>
