--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>albums</h1>
-    <h2>hmm:  </h2>
+    <div class="header">
+        <h1 class="header--title">Albums</h1>
+        <div class="header--nav">
+            <button class="header--nav--link">List View</button>
+            <button class="header--nav--link">Table  View</button>
+        </div>
+    </div>
     <table id="album-table" class="table"></table>
 
     <div class="album-list-container" id="albumListContainer"></div>
