--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,23 @@
 }
 
 body {
-    background-color: #fafafa;
+    background-color: #d5c1f7;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.header {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header--title {
+    margin-bottom: 20px;
+}
+
+.header--nav {}
 
 .album-list-container {
     max-width: 900px;
@@ -18,6 +32,7 @@ body {
     flex-direction: row;
     padding: 15px;
     border: 3px solid black;
+    background-color: #fefefe;
     width: 800px;
     margin-bottom: 12px
 }
@@ -37,13 +52,19 @@ body {
 }
 
 .genre {
-    margin-top: 20px
+    margin-top: 10px;
 }
 
-
+.genre span {
+    padding: 5px;
+    font-size: 13px;
+    background-color: #d5c1f7;
+    border-radius: 5px;
+}
 
 .review-sentence {
-    margin-top: 10px;
+    margin-top: 40px;
+    margin-left: 20px;
     font-style: italic;
 }
 
@@ -64,9 +85,4 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.genre span {
-    border: 1px solid black;
-    padding: 5px;
 }
