add font styling and additional styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albums</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
         <h1 class="header--title">Albums</h1>
         <div class="header--nav">
             <button class="header--nav--link">List View</button>
-            <button class="header--nav--link">Table  View</button>
+            <button class="header--nav--link">Table View</button>
         </div>
     </div>
     <table id="album-table" class="table"></table>
