--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: #d5c1f7;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .header {
@@ -27,28 +27,33 @@ body {
     margin-right: auto;
 }
 
-.album-row {
+.album {
     display: flex;
     flex-direction: row;
-    padding: 15px;
-    border: 3px solid black;
     background-color: #fefefe;
-    width: 800px;
+    max-width: 800px;
     margin-bottom: 12px
 }
 
-.album-image img {
+.album--image {
     width: 200px;
 }
 
-.album-info {
-    margin-left: 9px;
+.album--info {
+    padding: 20px;
 }
 
-.title {
+.album--title {
+    font-family: 'Heebo', sans-serif;
+    font-size: 38px;
+}
+
+.album--artist-title {
     text-transform: uppercase;
     font-size: 20px;
-    color: gray
+    color: gray;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
 }
 
 .genre {
@@ -59,12 +64,12 @@ body {
     padding: 5px;
     font-size: 13px;
     background-color: #d5c1f7;
-    border-radius: 5px;
 }
 
-.review-sentence {
-    margin-top: 40px;
+.album--review {
     margin-left: 20px;
+    margin-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
 }
 
@@ -74,11 +79,11 @@ body {
     align-items: center;
     justify-content: center;
     margin-left: auto;
-    margin-right: 10px;
+    padding: 50px;
 }
 
 .score div {
-    border: 3px solid black;
+    background-color: #d5c1f7;
     border-radius: 50%;
     width: 100px;
     height: 100px;
