added buttons for sorting data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,12 @@
             <button class="header--nav--link">Table View</button>
         </div>
     </div>
-    <table id="album-table" class="table"></table>
 
+    <div class="sorting-buttons">
+        <button id="sortByScore">Sort by Score</button>
+        <button id="sortByArtist">Sort by Artist</button>
+        <button id="sortByAlbum">Sort by Album Title</button>
+    </div>
     <div class="album-list-container" id="albumListContainer"></div>
 
 
