--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,17 +13,18 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="header--title">Albums</h1>
-        <div class="header--nav">
+        <h1 class="header--title">ALBUMS</h1>
+        <p>A comprehensive list of every album I have ever listened to and my personal rating of them.</p>
+        <!-- <div class="header--nav">
             <button class="header--nav--link">List View</button>
             <button class="header--nav--link">Table View</button>
-        </div>
+        </div> -->
     </div>
 
     <div class="sorting-buttons">
-        <button id="sortByScore">Sort by Score</button>
-        <button id="sortByArtist">Sort by Artist</button>
-        <button id="sortByAlbum">Sort by Album Title</button>
+        <button class="sorting-buttons--btn" id="sortByScore">Sort by Score</button>
+        <button class="sorting-buttons--btn" id="sortByArtist">Sort by Artist</button>
+        <button class="sorting-buttons--btn" id="sortByAlbum">Sort by Album Title</button>
     </div>
     <div class="album-list-container" id="albumListContainer"></div>
 
