--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,21 @@
         <button class="sorting-buttons--btn" id="sortByArtist">Sort by Artist</button>
         <button class="sorting-buttons--btn" id="sortByAlbum">Sort by Album Title</button>
     </div>
+    <div class="filter-buttons">
+        <input type="checkbox" id="rock" name="rock" value="Rock" checked>
+        <label for="rock">Rock</label>
+        <input type="checkbox" id="hiphop" name="hiphop" value="Hip Hop" checked>
+        <label for="hiphop">Hip Hop</label>
+        <input type="checkbox" id="emo" name="emo" value="Emo" checked>
+        <label for="emo">Emo</label>
+        <input type="checkbox" id="electronic" name="electronic" value="Electronic" checked>
+        <label for="electronic">Electronic</label>
+        <input type="checkbox" id="pop" name="pop" value="Pop" checked>
+        <label for="pop">Pop</label>
+        <input type="checkbox" id="jazz" name="jazz" value="Jazz" checked>
+        <label for="jazz">Jazz</label>
+        <button id="applyFilters" class="filter-buttons--btn">Apply Filters</button>
+    </div>
     <div class="album-list-container" id="albumListContainer"></div>
 
 
