--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,8 @@ body {
     background-color: white;
     max-width: 900px;
     margin: 30px auto 30px;
+    box-shadow: 0px 0px 8px 8px rgba(158, 158, 158, 0.2);
+
 }
 
 .header--title {
@@ -41,6 +43,8 @@ body {
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 0px 8px 8px rgba(158, 158, 158, 0.2);
+
 }
 
 .sorting-buttons--btn {
@@ -65,6 +69,8 @@ body {
     padding: 10px;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 8px 8px rgba(158, 158, 158, 0.2);
+
 }
 
 
@@ -98,7 +104,8 @@ body {
     flex-direction: row;
     background-color: #fefefe;
     max-width: 100%;
-    margin-bottom: 22px
+    margin-bottom: 22px;
+    box-shadow: 0px 0px 8px 8px rgba(158, 158, 158, 0.2);
 }
 
 .album--image {
